--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,7 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+@layer components {
+  .header_top_icon_wrapper {
+    @apply bg-gray-200 rounded-md p-[6px] text-[14px] cursor-pointer hover:bg-accent hover:text-white;
+  }
+
+  /* .navbar_link::after {
+    position: absolute;
+    content: "";
+    background-color: #ff8f9c;
+    height: 3px;
+    width: 100px;
+    bottom: -5px;
+    left: 0;
+    right: 0;
+    transform-origin: left;
+    transition: all 0.4s;
+  }
+
+  .navbar_link:hover::after {
+    scale: 1;
+  } */
+}
+
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -30,4 +53,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-}
+} */
